# MilAnon

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ZZ_Unterlagen Review Product Design/Dossier 2020/: 000 Allgemeiner Bf.docx  0000 Dokumentenbudget.docx  00000 Titelblatt.docx  001 Organigramm V.2.xls  003 Karte WK Raum Härkingen.docx  004 Karte WK Raum Basel.docx  005 Telefonliste.docx  008 Terminliste.docx  009 Bf Notfall-Alarmierung Härkingen.docx  010 Schema Notfall-Alarmierung.docx  011 Bf Notfall-Alarmierung Therwil.docx  100 Bf Dienstbetrieb.docx  101 Kontrollpunkte Tages Of.docx  102 Packungsbf.docx  200 Bf für die Ausbildung.docx  2020 Picasso v1.xlsx  Grafiken.pptx
ZZ_Unterlagen Review Product Design/Einsatzbefehle/: Kp_Einsatzbefehl_U_ETNA_DES.docx  Kp_Einsatzbefehl_U_HERMES_CINQUE_20250228_KUA.docx  Kp_Einsatzbefehl_U_VESUVIO_20250426DES.docx  Kp_Einsatzbefehl_U_VESUVIO_RAB.docx
ZZ_Unterlagen Review Product Design/Relevante Reglemente/: 50_040_d_FSO 17.md  (+5 more)
data/: README.md  military_units.csv  swiss_military_ranks.md  swiss_municipalities.csv
docs/: BACKLOG.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  OPEN_DECISIONS.md  PISA_410_COLUMN_MAPPING.md  PRD.md  PRODUCT_DESIGN_COMMAND_ASSISTANT.md  PRODUCT_DESIGN_TF17_APPENDIX.md  ROADMAP.md  SESSION_HANDOVER.md  STRATEGIC_ANALYSIS.md  USER_JOURNEY_WK2026.md
scripts/: download_plz.py  e2e_acceptance_test.sh  launch_gui.command  test_round_trip.sh
tests/: conftest.py  test_fr004_docx_writer.py  test_fr017_two_tier.py  test_skeleton.py
(+188 files in other folders)
