[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "milanon"
version = "0.5.0"
description = "Swiss Military Document Anonymizer & De-Anonymizer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MilAnon Contributors"},
]

dependencies = [
    "click>=8.1",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "pdf2image>=1.17",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "streamlit>=1.35",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "fpdf2>=2.7",
]

[project.scripts]
milanon = "milanon.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (run with pytest -m slow)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
